src/objects/Product_Assignment__c.object
<CustomObject>
    <description>Join object between Accounts and ICCS Product Currency. Used by ICCS in their participation process.</description>
    <fields>
        <fullName>Accelerated_Function__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accelerated Function</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accelerated_Settlement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accelerated Settlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Account must have the Airline Headquarters record type.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Airline Headquarters</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ICCS Product Assignments</relationshipLabel>
        <relationshipName>Product_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Code__c</fullName>
        <formula>ICCS_Bank_Account__r.Name</formula>
        <label>Bank Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Currency__c</fullName>
        <formula>ICCS_Bank_Account__r.Currency__c</formula>
        <label>Bank Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Contact on the Case that triggered the creation of the PA record.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ICCS Product Assignments</relationshipLabel>
        <relationshipName>ICCS_Product_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>De_Activation_Date__c</fullName>
        <label>(De)Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GSA_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GSA Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICCS_Bank_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ICCS Bank Account</label>
        <referenceTo>ICCS_Bank_Account__c</referenceTo>
        <relationshipName>Product_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICCS_Code__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  Id ,  ICCS_Product_Currency__r.ICCS_Code__c , &apos;_self&apos;)</formula>
        <label>ICCS Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICCS_Product_Code__c</fullName>
        <formula>ICCS_Product_Currency__r.ICCS_Code__c</formula>
        <label>ICCS Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICCS_Product_Currency__c</fullName>
        <label>ICCS Product Currency</label>
        <referenceTo>ICCS_Product_Currency__c</referenceTo>
        <relationshipLabel>ICCS Product Assignments</relationshipLabel>
        <relationshipName>Product_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Notice_of_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice of Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Split_Type__c</fullName>
        <label>Split Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Party_Payment__c</fullName>
        <formula>ICCS_Bank_Account__r.Third_Party_Payment__c</formula>
        <label>Third Party Payment</label>
        <type>Checkbox</type>
    </fields>
    <label>ICCS Product Assignment</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>ICCS Product Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICCS Product Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AmountOnlyForRightSplitType</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   NOT(ISBLANK(Amount__c)),
   NOT(ISPICKVAL(Split_Type__c,&apos;Amount&apos;))
)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>This field is available only if Split Type = &quot;Amount&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckAcceleratedSettlementOnAccount</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   Accelerated_Settlement__c,
   NOT( Account__r.Accelerated_Settlement__c)
)</errorConditionFormula>
        <errorDisplayField>Accelerated_Settlement__c</errorDisplayField>
        <errorMessage>Accelerated settlement is not allowed for this account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckAcceleratedSettlementOnCountry</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   Accelerated_Settlement__c,
   NOT( ICCS_Product_Currency__r.ICCS_Product_Country__r.Accelerated_Settlement__c)
)</errorConditionFormula>
        <errorDisplayField>Accelerated_Settlement__c</errorDisplayField>
        <errorMessage>Accelerated settlement is not allowed for this country</errorMessage>
    </validationRules>
</CustomObject>